--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/lee.io.css" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -16,7 +14,8 @@
         </div>
     </div>
 
-    <script src="_bundle.js"></script>
+    <script src="js/terminal.js"></script>
+    <script src="js/lee.io.js"></script>
 </body>
 
 </html>
