add keydown to terminal + focus, set cursor style when not focused

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="flex">
         <div class="box">
             <div class="title-bar">lee.io</div>
-            <div id="terminal"></div>
+            <div id="terminal" tabindex="0"></div>
         </div>
     </div>
 
